0.8-7
- adp objects now also hold 'percent good' for RDI instruments
- plot.drifter(): improve multi-panel plots
- imagep(): new argument 'missingColor'
- imagep() and drawPalette(): new argument 'labels' and 'at'

0.8-6
- imagep(): permit POSIXt type for zlim

0.8-5
- reconstruct data(ctd) so plot will focus maps better
- plotInset() added
- grid() works for oce-based time axes
- imagep(..., filledContours): obey ylab argument
- subset(): permit subsetting ADP by pressure
- oce.plot.ts(): obey arguments xaxt and yaxt
- improve support for shapefile coastlines

0.8-4
- replace 'center' argument for plotting topography and coastline with
  clatitude and clongitude
- add 'echosounder' class
- fullFilename(): handle URLs properly
- ADV objects: add access to slow variables (e.g. headingSlow)

0.8-3
- add 'met' class
- subset.oce() handles section objects
- draw.section(): permit xtype="latitude" or "longitude"
- imagpe() has drawPalette="space" option

0.8-2
- fix bug in read.coastline(), reversing lon and lat [issue162]
- fix bug in S4 adp validity checker
- geodDist(): add argument 'alongPath'
- remove compilation warning about doc for summary.ctd()

0.8-1
- switch to S4 classes, and add new accessors and 'show' functions.
- add support for RBR 'rsk' files
- plot.section() now uses 'col' if supplied

0.7-1
- improve oceColorsJet()
- improve plotProfile() vertical range with missing data
- add data(drag)
- plotProfile() and plot.ctd(): add xtype="spice"
- add data(geosecs235)
- plotProfile() and plot.ctd(): add argument 'keepNA'
- as.ctd(): add arguments 'other' and 'missingValue'
- read.lobo(): tolerate more formats, including missing velocities
- add data(schmitt)
- add accessor spice()
- handle O2 and nutrients in CTD data and sections
- swSCTp(): use surface pressure as a default
- plotTS(): add arguments inSitu and referencePressure
- plotTS(): handle section objects
- fix bugs reported in issues 150, 151, 153, 155, 156